Stopped trying to fix white space gap..

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,9 +5,6 @@ html {
   margin: 0;
   padding: 0;
   height: 100.1%;
-  width: 100%;
-  position: fixed;
-  overflow: hidden;
 }
 
 body {
